# overlay-sales

./: .gitignore  Cargo.toml  README.md
misc/: .gitignore  Cargo.toml
misc/concordium-smart-contract-testing/: Cargo.toml
misc/concordium-smart-contract-testing/src/: impls.rs
misc/signer/: Cargo.toml  README.md
misc/signer/src/: cmd.rs  config.rs  lib.rs  main.rs  types.rs
misc/signer/src/cmd/: keygen.rs  node.rs  sign.rs  smc.rs
misc/signer/src/cmd/smc/: init.rs  update.rs
misc/signer/src/cmd/smc/ovl_operator/: init.rs  update.rs
misc/signer/src/cmd/smc/pub_rido_usdc/: init.rs
misc/tester/: Cargo.toml
misc/tester/examples/: 1.rs  1001.rs  11.rs  2.rs  main.rs  testing.rs
misc/tester/p/: ctx_upd.json
misc/tester/p/0/rido_usdc/: p_init_pub_usdc.json
misc/tester/p/0/usdc/: p_balanceof.json  p_deposit.json  p_grant_role.json  p_transfer_contract.json
misc/tester/p/1/pjtoken/: p_mint.json
misc/tester/p/1/rido/: p_init_pub_usdc.json  p_set_pjtoken.json  p_set_status.json  p_set_tge.json
misc/tester/p/1/usdc/: p_balanceof_pj.json  p_deposit3.json
misc/tester/p/1001/p/: init.json
misc/tester/p/1001/w/: get_some.json  set.json
misc/tester/p/11/rido_ccd/: balance_bro.json  balance_red.json  init.json  tge.json  token.json  view_stake.json  wl.json
misc/tester/p/2/pjtoken/: p_balanceof_contract.json  p_balanceof_user1.json  p_transfer_create_pool.json
misc/tester/p/2/rido/: p_init_pub_usdc.json  p_set_status.json
misc/tester/p/2/usdc/: p_balanceof_contract.json  p_deposit.json  p_deposit2.json  p_init.json  p_transfer_contract.json  p_transfer_contract2.json  p_transfer_contract3.json
misc/tester/src/: chain.rs  cmd.rs  config.rs  context.rs  env.rs  lib.rs  main.rs  types.rs  utils.rs
misc/tester/src/env/: init.rs  receive.rs
misc/tester_v2/: .gitignore  Cargo.toml
misc/tester_v2/examples/: 1.rs  testing.rs
misc/tester_v2/p/: ctx_init.json  ctx_upd_ca.json
misc/tester_v2/p/1/pjtoken/: p_balanceof_contract.json  p_balanceof_pj.json  p_transfer_create_pool.json
misc/tester_v2/p/1/rido/: p_init_pub_usdc.json  p_set_pjtoken.json  p_whitelisted.json
misc/tester_v2/p/1/usdc/: p_balanceof_user1.json  p_deposit.json  p_transfer_contract.json  p_transfer_contract2.json  p_transfer_contract3.json
misc/tester_v2/p/1001/w/: get_none.json
misc/tester_v2/p/11/pjtoken/: p_balanceof_ovl.json  p_init.json  p_init_0.json
misc/tester_v2/p/11/rido_ccd/: balance.json  create_pool.json  deposit.json  status.json
misc/tester_v2/p/2/rido/: p_whitelisted.json
misc/tester_v2/p/2/usdc/: p_grant_role.json  p_transfer.json
misc/tester_v2/src/: chain.rs  lib.rs  utils.rs
ovl-operator/: .gitignore  Cargo.toml
ovl-operator/src/: lib.rs  sctest.rs
ovl-sale-ccd-public/: Cargo.toml
ovl-sale-ccd-public/src/: lib.rs  sctest.rs  state.rs  view.rs
ovl-sale-ccd-public/src/sctest/: overlay_team.rs  participant.rs  project_admin.rs
ovl-sale-usdc-public/: .gitignore  Cargo.toml  a.rs
ovl-sale-usdc-public/src/: lib.rs  sctest.rs  state.rs  view.rs
ovl-sale-usdc-public/src/sctest/: overlay_team.rs  participant.rs  project_admin.rs
sale-utils/: Cargo.toml
sale-utils/src/: error.rs  lib.rs  types.rs
