[package]
name = "ovl-sale-ccd-public"
description = "Concordium smart contract modelling sales information of projects listed in OVERLAY."
version = "0.2.2"
authors = [
    "daratao",
    "Hiroki Tanaka <hiroki.tanaka@kumano-te.com>"
]
edition = "2021"
license = "MPL-2.0"
publish = false
homepage = "https://overlay.global/"
repository = "https://github.com/overlaydao/overlay-sales"
rust-version = "1.68.1"

[features]
crypto-primitives = ["concordium-std/crypto-primitives"]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std"]
wasm-test = ["concordium-std/wasm-test", "concordium-std/concordium-quickcheck"]

[dependencies]
concordium-cis2 = "3.0.0"
concordium-std = { version = "6.1.0", default-features = false }
sale-utils = { path = "../sale-utils" }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"

[dev-dependencies]
concordium-std = { version = "6.1.0", features = ["concordium-quickcheck"] }
