[package]
authors = [
  "daratao",
  "Hiroki Tanaka <hiroki.tanaka@kumano-te.com>",
]
description = "Concordium smart contract modelling sales information of projects listed in OVERLAY."
edition = "2021"
homepage = "https://overlay.global/"
license = "MPL-2.0"
name = "ovl-sale-ccd-public"
publish = false
repository = "https://github.com/overlaydao/overlay-sales"
rust-version = "1.68.1"
version = "0.3.0"

[features]
crypto-primitives = ["concordium-std/crypto-primitives"]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std"]
wasm-test = ["concordium-std/wasm-test", "concordium-std/concordium-quickcheck"]

[dependencies.concordium-cis2]
path = "../concordium-rust-smart-contracts/concordium-cis2"
version = "3.0.0"

[dependencies.concordium-std]
default-features = false
path = "../concordium-rust-smart-contracts/concordium-std"
version = "6.1.1"

[dependencies]
sale-utils = {path = "../sale-utils"}

[dev-dependencies.concordium-std]
features = ["concordium-quickcheck"]
path = "../concordium-rust-smart-contracts/concordium-std"
version = "6.1.1"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"
