[package]
authors = ["daratao", "Hiroki Tanaka <hiroki.tanaka@kumano-te.com>"]
description = "Concordium smart contract modelling sales information of projects listed in OVERLAY."
edition = { workspace = true }
homepage = { workspace = true }
license = "MPL-2.0"
name = "ovl-sale-ccd-public"
publish = false
repository = "https://github.com/overlaydao/overlay-sales"
rust-version = { workspace = true }
version = "0.3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
crypto-primitives = ["concordium-std/crypto-primitives"]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std"]
wasm-test = ["concordium-std/wasm-test", "concordium-std/concordium-quickcheck"]

[dependencies]
concordium-cis2.workspace = true
concordium-std.workspace = true
sale-utils = { workspace = true }

[dev-dependencies]
concordium-std = { workspace = true, features = ["concordium-quickcheck"] }
