[package]
authors = [
  "daratao",
]
description = "Concordium smart contract for public Regulated IDO with USDC on OVERLAY platform."
edition = "2021"
homepage = "https://overlay.global/"
license = "MPL-2.0"
name = "ovl-sale-usdc-public"
publish = false
repository = "https://github.com/overlaydao/overlay-sales"
rust-version = "1.68.1"
version = "0.2.0"

[features]
crypto-primitives = ["concordium-std/crypto-primitives"]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std"]
wasm-test = ["concordium-std/wasm-test", "concordium-std/concordium-quickcheck"]

[dependencies.concordium-cis2]
path = "../concordium-rust-smart-contracts/concordium-cis2"
version = "3.0.0"

[dependencies.concordium-std]
default-features = false
path = "../concordium-rust-smart-contracts/concordium-std"
version = "6.1.1"

[dependencies]
sale-utils = {path = "../sale-utils"}

[dev-dependencies.concordium-std]
features = ["concordium-quickcheck"]
path = "../concordium-rust-smart-contracts/concordium-std"
version = "6.1.1"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"
