[package]
authors = ["daratao"]
description = "Utilities for ovl-sale-ccd-public."
edition = "2021"
homepage = "https://overlay.global/"
license = "MPL-2.0"
name = "sale-utils"
publish = false
repository = "https://github.com/overlaydao/overlay-sales"
rust-version = "1.68.1"
version = "0.1.0"

[features]
default = ["std"]
std = ["concordium-std/std"]
u256_amount = []

[dependencies.concordium-cis2]
path = "../concordium-rust-smart-contracts/concordium-cis2"
version = "3.0.0"

[dependencies.concordium-std]
default-features = false
path = "../concordium-rust-smart-contracts/concordium-std"
version = "6.1.1"

[lib]
crate-type = ["rlib"]

[profile.release]
opt-level = "s"
