[package]
name = "sale-utils"
description = "Utilities for ovl-sale-ccd-public."
version = "0.1.0"
authors = ["daratao"]
edition = { workspace = true }
license = "MPL-2.0"
publish = false
homepage = { workspace = true }
repository = "https://github.com/overlaydao/overlay-sales"
rust-version = { workspace = true }

[features]
default = ["std"]
std = ["concordium-std/std"]
u256_amount = []

[dependencies]
concordium-cis2 = { workspace = true }
concordium-std = { workspace = true }

[lib]
crate-type = ["rlib"]
