[package]
name = "concordium-smart-contract-testing"
version = "2.0.0"
edition = "2021"
rust-version = "1.65"
license = "MPL-2.0"
readme = "README.md"
description = "A companion crate to `concordium-std` that supports off-chain end-to-end testing of smart contracts."
homepage = "https://github.com/Concordium/concordium-smart-contract-tools"
reposity = "https://github.com/Concordium/concordium-smart-contract-tools"
exclude = ["tests"]                                                                                                  # Do not publish tests.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
concordium-smart-contract-engine = "2.0.0"
concordium-wasm = "2.0.0"
concordium_base = "2.0.0"
sha2 = "0.10"
anyhow = "1"
thiserror = "1.0"
num-bigint = "0.4"
num-integer = "0.1"
