[package]
name = "concordium-smart-contract-testing"
version = "2.0.1"
edition = "2021"
rust-version = "1.68.1"
license = "MPL-2.0"
readme = "README.md"
description = "forked from concordium-smart-contract-tools for some additioal features"
exclude = ["tests"]

[dependencies]
chrono = "0.4.23"
concordium-smart-contract-engine = "2.0.0"
concordium-wasm = "2.0.0"
concordium_base = "2.0.0"
sha2 = "0.10"
anyhow = "1"
thiserror = "1.0"
num-bigint = "0.4"
num-integer = "0.1"
