[package]
edition = "2021"
name = "tester"
version = "0.1.0"

[dependencies.concordium-std]
default-features = false
path = "../../concordium-rust-smart-contracts/concordium-std"
version = "6.1.1"

[dependencies.concordium-cis2]
default-features = false
features = ["u256_amount"]
path = "../../concordium-rust-smart-contracts/concordium-cis2"
version = "3.0.0"


[dependencies]
# concordium-std = "6.2.0"
# concordium-cis2 = {version = "3.0.0", default-features = false, features = ["u256_amount"]}

anyhow = "1.0.66"
bs58 = {version = "0.4", features = ["check"]}
chrono = "0.4.23"
clap = {version = "4.2.5", features = ["derive"]}
ed25519-dalek = "=1.0"
hex = "0.4.3"
log = "0.4.0"
ptree = "0.4"
rand = "0.7.3"
sale-utils = {path = "../../sale-utils"}
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
sha2 = "0.10"
simplelog = "0.12.0"
tokio = {version = "1.21", features = ["full"]}
tonic = {version = "0.8", features = ["tls", "tls-roots"]}
primitive-types = {version = "0.11", default-features = false}

concordium-contracts-common = "6.0.0"
concordium-rust-sdk = "2.4.0"
concordium-smart-contract-engine = {version = "1.2.0", features = ["display-state"]}
concordium-wasm = "1.1.0"
concordium_base = "1.2.0"


# bcrypt = "^0.13.0"
# csv = "1.1.6"
# dotenvy = "0.15.6"
# futures = "0.3.26"
# rand_chacha = "0.3.1"
# rand_core = "0.5.1"
# reqwest = {version = "0.11.11", features = ["native-tls-alpn"]}
